[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-catalog-cli"
version = "0.1.0"
description = "数据要素目录命令行工具 - 批量整理可流通数据资源"
requires-python = ">=3.9"
authors = [
    { name = "Data Operations Team" }
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "jsonschema>=4.17.0",
]

[project.scripts]
datacat = "data_catalog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
